--- a/index.html
+++ b/index.html
@@ -683,7 +683,6 @@
             <div class="footer-links">
                 <a href="tel:+19187648515">Call: (918) 764-8515</a>
                 <a href="https://www.google.com/maps/place/Tano's+Automotive/@36.1777025,-95.9258553,17z/data=!4m15!1m8!3m7!1s0x87b6ed8a6fd90d29:0x104c53d60a091ac0!2sTano's+Automotive!8m2!3d36.1776476!4d-95.9258886!10e5!16s%2Fg%2F11nmrsxgp1!3m5!1s0x87b6ed8a6fd90d29:0x104c53d60a091ac0!8m2!3d36.1776476!4d-95.9258886!16s%2Fg%2F11nmrsxgp1?entry=ttu&g_ep=EgoyMDI1MTAyOS4yIKXMDSoASAFQAw%3D%3D" target="_blank">Google Business</a>
-                <a href="https://github.com/JamesBrownR/Tano-s-Automotive/new/main" target="_blank">GitHub</a>
             </div>
             <p style="margin-top: 20px;">&copy; 2024 Tano's Automotive. All rights reserved.</p>
         </div>
@@ -692,13 +691,62 @@
     <script>
         // Reviews Array - Add your reviews here
         const reviews = [
-            { name: "Customer 1", rating: 5, body: "" },
-            { name: "Customer 2", rating: 5, body: "" },
-            { name: "Customer 3", rating: 5, body: "" },
-            { name: "Customer 4", rating: 5, body: "" },
-            { name: "Customer 5", rating: 5, body: "" },
-            { name: "Customer 6", rating: 5, body: "" }
-        ];
+    {
+        "name": "Kristopher Downing",
+        "rating": 5,
+        "body": "I used these guys the better part of a year ago and they replaced the control arms on my S10 and they did a great job. I'm definitely using them again in the future. More"
+    },
+    {
+        "name": "Elias Ramos",
+        "rating": 5,
+        "body": "Honest and best work you can get from Tulsa mechanics, wouldn't trust my car anywhere else but here for the service you need for car problems."
+    },
+    {
+        "name": "Joe Bosworth",
+        "rating": 5,
+        "body": "Great service, will always come back, guys are great and knowledgeable. They do a great job at fixing anything I bring to them."
+    },
+    {
+        "name": "qExxee GT",
+        "rating": 5,
+        "body": "Gg"
+    },
+    {
+        "name": "Lucia Chris",
+        "rating": 5,
+        "body": "So good and nice"
+    },
+    {
+        "name": "Carlos Ramirez",
+        "rating": 5,
+        "body": "Positive Quality… More"
+    },
+    {
+        "name": "Koompheej Vang",
+        "rating": 5,
+        "body": ""
+    },
+    {
+        "name": "Stacey Vernon",
+        "rating": 5,
+        "body": ""
+    },
+    {
+        "name": "Leanna Baldridge",
+        "rating": 5,
+        "body": ""
+    },
+    {
+        "name": "James Colbert",
+        "rating": 1,
+        "body": "These guys are great at what they do. They don't try and keep your car for days! Also they will contact you as soon as they find the problem. Their prices are fair. Also they don't be over booking themselves. If you need some work done I would give these guys a try. 👍🏼👍🏼 …"
+    },
+    {
+        "name": "Patrick Hennen Jr.",
+        "rating": 3,
+        "body": ""
+    }
+];
 
         // Reviews Display Logic
         const reviewsPerPage = 6;
